# secrin

./: .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  alembic.ini  chatbot.py  deploy.sh  docker-compose.yml  gitmain.py  index.ts  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirement.txt  requirements.txt  run_api.py  setup.py  setup_config.py  start.sh  start_api.py  testQuestions.json  test_gemini.py  test_system.py  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  (+1 more)
api/: Dockerfile  index.py
apps/: docker-compose.yml
chroma_store/: chroma.sqlite3
config/: __init__.py  env.py  logging.py  settings.py
database/: graph.py
db/: index.py
devsecrin/: env.py
docs/: architecture.md  how-it-works.md  sample-data.md  use-cases.md
engine/: main.py
examples/: qa_examples.py  vector_search_examples.py
infra/: .dockerignore  Dockerfile  Dockerfile.ollama  README.md  docker-compose.yml  entrypoint.sh  start-ollama.sh
mails/: factory.py  template_vars.py  types.py
migration/: runner.py
script/: run_service.sh
scripts/: server.py  setup.py
semantic/: EmbeddingStore.py  LLMStore.py  PromptStore.py  VectorStore.py  __init__.py
service/: __main__.py  main.py
web/: middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json
(+224 files in other folders)
